crates/normalize-cfg/tests/snapshots/javascript_cfg__javascript_linear.snap
---
source: crates/normalize-cfg/tests/javascript_cfg.rs
expression: mermaid
---
flowchart TD
    b0(["entry"])
    b1(["exit"])

    b0 -->|"return"| b1
